--- a/public/index.html
+++ b/public/index.html
@@ -7,28 +7,10 @@
   ZAPPER STATUS: <span id="is-connected"></span>
   <input type="button" id="is-connected-btn" value="Refresh">
   <br/> <hr/> <br/>
+  <strong>When you are ready:</strong>
   <form>
-    <table cellpadding="5">
-      <tr>
-        <th>Strength</th>
-        <!-- <th>Duration</th> -->
-      </tr>
-      <tr>
-        <td>
-          <input type="radio" name="strength" value="1" checked>1x<br/>
-          <input type="radio" name="strength" value="2">2x<br/>
-          <input type="radio" name="strength" value="3">3x<br/>
-          <input type="radio" name="strength" value="4">4x<br/>
-          <input type="radio" name="strength" value="5">5x<br/>
-        </td>
-        <!-- <td>
-          <input type="radio" name="duration" value="1" checked>Short<br/>
-          <input type="radio" name="duration" value="2">Medium<br/>
-          <input type="radio" name="duration" value="3">Long<br/>
-        </td> -->
-      </tr>   
-      <tr><td colspan="2"><input type="submit" value="ZAP!"></td></tr>     
-    </table>
+    <input type="hidden" name="strength" value="5">
+    <input type="submit" value="ZAP!">
   </form>
 </body>
 </html>
